--- a/DEMO WEB/index.html
+++ b/DEMO WEB/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./main.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>Cùng nhau up code dự án lên github nào </h1>
+     <!-- Tiêu đề và Đoạn văn -->
+     <h1>Giới Thiệu Về Sở Thích</h1>
+     <hr>
+     <h2>Về bản thân tôi </h2>
+     <p>Xin chào mọi người! Tôi là <b> một người rất </b> đam mê về "<i>công nghệ</i>" và <u>đặc biệt là trong lập trình web</u>.</p>
+
+     <!-- Liên kết và Ảnh -->
+     <p>Tham khảo trang web tôi học lập trình yêu thích tại đây nhé: 
+        <a href="https://fullstack.edu.vn/">F8 Fullstack </a>
+     </p>
+     <img src="./img/1-5.jpg" alt="Ảnh yêu thích về lập trình " width="300">
+ 
+     <!-- Danh sách -->
+     <h3>Các sở thích của tôi</h3>
+     <ul>
+         <li>Đọc sách</li>
+         <li>Chơi nhạc cụ</li>
+         <li>Thể thao</li>
+     </ul>
+     <ol>
+         <li>Đọc sách về công nghệ</li>
+         <li>Chơi đàn guitar</li>
+         <li>Chơi bóng đá</li>
+     </ol>
+ 
+     <!-- Bảng -->
+     <h3>Lịch học hằng ngày</h3>
+     <table >
+         <caption>Lịch học hàng ngày của tôi</caption>
+         <tr>
+             <th>Thời gian</th>
+             <th>Hoạt động</th>
+         </tr>
+         <tr>
+             <td>08:00 - 11:00</td>
+             <td>Học lập trình</td>
+         </tr>
+         <tr>
+             <td>14:00 - 18:00</td>
+             <td>Đọc tài liệu</td>
+         </tr>
+     </table>
+ 
+     <!-- Biểu mẫu -->
+     <h3>Thông Tin Liên Hệ</h3>
+     <form>
+         <label for="name">Tên của bạn:</label>
+         <input type="text" id="name" name="name"><br><br>
+ 
+         <label for="email">Email:</label>
+         <input type="email" id="email" name="email"><br><br>
+ 
+         <input type="submit" value="Gửi">
+     </form>
 </body>
 </html>
