--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <img src="./img/1-5.jpg" alt="Ảnh yêu thích về lập trình " width="300">
  
      <!-- Danh sách -->
-     <h3>Các sở thích của tôi</h3>
+     <h3>Các sở thích của tôi la </h3>
      <ul>
          <li>Đọc sách</li>
          <li>Chơi nhạc cụ</li>
