--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
  
      <!-- Biểu mẫu -->
      <h3>Thông Tin Liên Hệ</h3>
-     <form>
+      <form>
          <label for="name">Tên của bạn:</label>
          <input type="text" id="name" name="name"><br><br>
  
          <label for="email">Email:</label>
-         <input type="email" id="email" name="email"><br><br>
+         <input type="email" id="email" name="email" placeholder="Xin chao quy khach" ><br><br>
  
          <input type="submit" value="Gửi">
      </form>
